@@ -1,11 +1,10 @@
 #!/usr/bin/make -f
 
-PATH := /usr/lib/freebsd:$(PATH)
-
 SOURCE = freebsd-quota
 VERSION = $(shell dpkg-parsechangelog | sed -n '/^Version/ {s/.*: //; s/-.*//; p;}')
 SVNLOC = "http://svn.freebsd.org/base/release/$(VERSION).0"
 
+PATH := /usr/lib/freebsd:$(PATH)
 DESTDIR = $(CURDIR)/debian/tmp
 ORIGDIR = $(SOURCE)-$(VERSION)
 TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
@@ -15,12 +14,22 @@ CFLAGS = -Wall -g -pipe -fPIC -I. -D_GNU_SOURCE \
 PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 \
         NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
 
+PROGS_DEP = \
+  sbin/fsck \
+  sbin/fsck_ffs \
+  $(nil)
+PROGS = \
+  libexec/rpc.rquotad \
+  sbin/quotacheck \
+  usr.bin/quota \
+  usr.sbin/edquota \
+  usr.sbin/quotaon \
+  usr.sbin/repquota \
+  $(nil)
+
 get-orig-source:
 	rm -rf $(ORIGDIR)
-	for nn in sbin/fsck sbin/fsck_ffs sbin/quotacheck \
-		  libexec/rpc.rquotad usr.bin/quota \
-		  usr.sbin/edquota usr.sbin/quotaon usr.sbin/repquota; \
-	do \
+	for nn in $(PROGS_DEP) $(PROGS); do \
 		svn export $(SVNLOC)/$$nn $(ORIGDIR)/$$nn; \
 	done
 	tar --numeric-owner --owner 0 --group 0 \
@@ -30,25 +39,51 @@ get-orig-source:
 build-indep:
 
 build-arch:
-	$(PMAKE) -C libexec/rpc.rquotad
-	$(PMAKE) -C sbin/quotacheck
-	$(PMAKE) -C usr.bin/quota
-	$(PMAKE) -C usr.sbin/edquota
-	$(PMAKE) -C usr.sbin/quotaon
-	$(PMAKE) -C usr.sbin/repquota
+	for prog in $(PROGS); do \
+	  $(PMAKE) -C $$prog; \
+	done
 
 build: build-indep build-arch
 
-override_dh_auto_clean:
-	$(PMAKE) -C libexec/rpc.rquotad clean
-	$(PMAKE) -C sbin/quotacheck clean
-	$(PMAKE) -C usr.bin/quota clean
-	$(PMAKE) -C usr.sbin/edquota clean
-	$(PMAKE) -C usr.sbin/quotaon clean
-	$(PMAKE) -C usr.sbin/repquota clean
+clean:
+	dh_testdir
+	dh_testroot
 
-override_dh_installinit:
-	dh_installinit -- start 13 S . stop 06 0 6 .
+	for prog in $(PROGS); do \
+	  $(PMAKE) -C $$prog clean; \
+	done
 
-%:
-	dh $@
+	dh_clean
+
+.PHONY: clean build-indep build-arch build
+
+install-arch: build-arch
+	dh_testdir
+	dh_testroot
+	dh_prep -a
+	dh_installdirs -a
+	dh_installchangelogs -a
+	dh_installdocs -a
+	dh_installinit -a -- start 13 S . stop 06 0 6 .
+	dh_installman -a
+	dh_install -a
+
+binary-indep:
+# Nothing to do.
+
+binary-arch: install-arch
+	dh_testdir -a
+	dh_testroot -a
+	dh_link -a
+	dh_strip -a
+	dh_compress -a
+	dh_fixperms -a
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
+
+binary: binary-indep binary-arch
+
+.PHONY: install-arch binary-indep binary-arch binary
