@@ -5,7 +5,8 @@ freebsd-quota (8.2-2) UNRELEASED; urgency=low
   * Now using Standards-Version 3.9.4 (no changes needed).
   * Switch from patching the source to use the libbsd overlay, this fixes
     a FTBFS with newer libbsd that moved away libutil.h.
-  * Rename build target to build-arch to make it more accurate.
+  * Switch from dh sequencer to a proper explicit debhelper rules file.
+    dh does not cope well with setting the PATH variable.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 01 May 2013 16:42:02 +0200
 
